# Netatalk

./: configure.ac
etc/netatalk/: Makefile.am
macros/: netatalk.m4  summary.m4
